--- a/my-movie-app/package.json
+++ b/my-movie-app/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-player": "^2.9.0",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
